<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GroupDetailActivity" >
    
    <TextView
        android:id="@+id/txt_group_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/txt_group_sport_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_group_description"
        android:text="@string/sport_" />

    <TextView
        android:id="@+id/txt_group_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_group_sport_label"
        android:layout_toRightOf="@id/txt_group_sport_label" />

    <LinearLayout
        android:id="@+id/view_group_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        android:orientation="horizontal"
        android:layout_below="@id/txt_group_sport_label" >

        <TextView
            android:id="@+id/txt_group_users_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/users_" />

        <TextView
            android:id="@+id/txt_group_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_group_spots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        android:orientation="horizontal"
        android:layout_below="@id/view_group_users" >

        <TextView
            android:id="@+id/txt_group_spots_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spots" />

        <TextView
            android:id="@+id/txt_group_spots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_group_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_group_spots"
        android:text="@string/join_group" />

</RelativeLayout>